@@ -1,10 +1,10 @@
     <?xml version="1.0" encoding="UTF-8"?>
     <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "https://www.apple.com/DTDs/PropertyList-1.0.dtd">
-    <!-- This is a dummy driver which binds to Junsi iCharger 308/4010 Duo USB interface  -->
+    <!-- This is a kernel extension which binds to Junsi iCharger X6/X8/308Duo/4010Duo/406Duo USB-HID interface  -->
     <!-- contains no actual code; its only purpose is to     -->
-    <!-- prevent Apple's USBHID driver from exclusively      -->
+    <!-- prevent Apple's USB-HID driver from exclusively     -->
     <!-- opening the device.                                 -->
-    <plist version="1.0">
+    <plist version="1.1">
     <dict>
         <key>CFBundleDevelopmentRegion</key>
         <string>English</string>
@@ -22,8 +22,8 @@
         <string>1.0.0d1</string>
         <key>IOKitPersonalities</key>
         <dict>
-            <!-- The Junsi iCharger 308/4010 DUO USB interface -->
-            <key>iChargerDUO</key>
+            <!-- The Junsi iCharger X6/X8/308Duo/4010Duo/406Duo USB-HID interface -->
+            <key>iChargerDuo</key>
             <dict>
                 <key>CFBundleIdentifier</key>
                 <string>com.apple.kpi.iokit</string>
