@@ -1,8 +1,8 @@
     <?xml version="1.0" encoding="UTF-8"?>
     <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "https://www.apple.com/DTDs/PropertyList-1.0.dtd">
-    <!-- This is a dummy driver which binds to SKYRC devices -->
+    <!-- This is a kernel extension which binds to SKYRC devices -->
     <!-- contains no actual code; its only purpose is to     -->
-    <!-- prevent Apple's USBHID driver from exclusively      -->
+    <!-- prevent Apple's USB HID driver from exclusively     -->
     <!-- opening the device.                                 -->
     <plist version="1.0">
     <dict>
